--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-supabase-jokes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
     "@testing-library/jest-dom": "^5.16.5",
