--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
-[build]
-command ='npm run build'
-functions = 'functions'
-publish = 'build'
+[[redirects]]
+from ='/*'
+to = '/index.html'
+status = 200
